# rusty_films

./: Shuttle.toml
api/lib/: Cargo.toml
api/lib/src/: films.rs  health.rs  lib.rs
api/lib/src/film_repository/: mod.rs
api/lib/tests/: health.rs
api/migrations/: schema.sql
api/shuttle/: Cargo.toml
api/shuttle/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs  models.rs
