[package]
name = "api_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
# actix
actix-web = "4.3.1"

# shared
shared = { path = "../../shared" }

# utils
async-trait = "0.1.79"
uuid = { version = "1.8.0", features = ["serde", "v4", "js"] }

[dev-dependencies]
actix-rt = "2.9.0"

# serde
serde = "1.0.197"
serde_json = "1.0.114"


