[package]
name = "api-shuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.196", features = ["derive"] }
shuttle-actix-web = "0.39.0"
shuttle-runtime = "0.39.0"
shuttle-secrets = "0.39.0"
shuttle-shared-db = { version = "0.39.0", features = ["postgres", "sqlx"]}
sqlx = { version = "0.7.3", features = ["postgres", "tls-native-tls", "uuid", "chrono", "macros", "json"] }
tokio = "1.26.0"
tracing = "0.1.40"

api_lib = { path = "../lib"}
